# term-toolkit

./: .eslint.conf.js  .gitignore  .versionrc.json  CHANGELOG.md  Cargo.toml  LICENSE  README.md  bun.lockb  index.ts  install.js  package.json  tsconfig.json
crates/build-and-sign/: Cargo.toml
crates/build-and-sign/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/clone-repo/: Cargo.toml
crates/clone-repo/src/: lib.rs
crates/copy-clean/: Cargo.toml
crates/copy-clean/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: fs_utils.rs  git.rs  lib.rs  markdown.rs  output.rs  prompt.rs
crates/deleter/: Cargo.toml
crates/deleter/src/: lib.rs
crates/git-digest/: Cargo.toml
crates/git-digest/src/: lib.rs
crates/mp3-compress/: Cargo.toml
crates/mp3-compress/src/: lib.rs
crates/mp4-optimize/: Cargo.toml
crates/mp4-optimize/src/: lib.rs
crates/optimize/: Cargo.toml
crates/optimize/src/: lib.rs
crates/rename/: Cargo.toml
crates/rename/src/: lib.rs
crates/sign/: Cargo.toml
crates/sign/src/: lib.rs
docs/superpowers/plans/: 2026-05-28-ttk-rust-rewrite-review.md  2026-05-28-ttk-rust-rewrite.md
docs/superpowers/specs/: 2026-05-28-cli-tools-port-design.md  2026-05-28-ttk-rust-rewrite-design.md
src/: index.ts
src/scripts/: deleter.ts  git.ts  optimizer.ts  rename-sequence.ts
src/scripts/domain/: images.ts
src/scripts/utils/: files.ts  getPackageInfo.ts  numbers.ts
